charts/openshift/crunchy/rendered.yaml
---
# Source: crunchy/templates/knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bcwat-dev
  labels:
    app.kubernetes.io/name: crunchy
    app.kubernetes.io/instance: bcwat-dev
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: bcwat-dev-crunchy
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: bcwat-dev-crunchy
  policyTypes:
    - Ingress
---
# Source: crunchy/templates/knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-to-db
  labels:
    app.kubernetes.io/name: crunchy
    app.kubernetes.io/instance: bcwat-dev
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: bcwat-dev-crunchy
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/tier: airflow
  policyTypes:
    - Ingress
---
# Source: crunchy/templates/knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-internal
  labels:
    app.kubernetes.io/name: crunchy
    app.kubernetes.io/instance: bcwat-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/tier: airflow
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/tier: airflow
  policyTypes:
    - Ingress
